<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.justjava.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/namehint"
            android:inputType="textCapWords" />

        <TextView
            android:text="@string/topping"
            style="@style/headerTextStyle" />


            <CheckBox
                android:id="@+id/checkbox_whippedCream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/whippedCreame"/>


            <CheckBox
                android:id="@+id/checkbox_Chocolate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/chocolate"/>


        <TextView
            android:id="@+id/txtQuant"
            android:text="@string/quantity"
            style="@style/headerTextStyle"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:layout_width="49dp"
                android:layout_height="48dp"
                android:layout_marginBottom="16sp"
                android:text="-"
                android:onClick="decrement"/>

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16sp"
                android:text="@string/initial_quantity_value"
                android:textColor="#000000"
                android:textSize="16sp"
                 />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="16sp"
                android:text="+"
                android:onClick="increment"/>



        </LinearLayout>

        <TextView
            android:id="@+id/txtP"
            android:text="@string/orderSummary"
            style="@style/headerTextStyle"
            />
        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$10.00"
            android:textSize="16sp"
            android:textColor="#000000"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:textSize="16sp"
            android:id="@+id/button"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"/>

    </LinearLayout>
</ScrollView>
